--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>334590881340-deud6l32f6u2bm4814uedhfgq0pa2h7p.apps.googleusercontent.com</string>
+	<string>416969091812-d3eo4lq8getifm7l5oakas099mv775ko.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.334590881340-deud6l32f6u2bm4814uedhfgq0pa2h7p</string>
+	<string>com.googleusercontent.apps.416969091812-d3eo4lq8getifm7l5oakas099mv775ko</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBUE4tefFIZQ-pYn0HKCg9gIRR_bvC6eIY</string>
+	<string>AIzaSyAtGv78w-Ucit0Bi7yLOQ10aYMUd42gskM</string>
 	<key>GCM_SENDER_ID</key>
-	<string>334590881340</string>
+	<string>416969091812</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.wordMapApp</string>
 	<key>PROJECT_ID</key>
-	<string>wordsmapapp</string>
+	<string>wordmap-app</string>
 	<key>STORAGE_BUCKET</key>
-	<string>wordsmapapp.firebasestorage.app</string>
+	<string>wordmap-app.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:334590881340:ios:a8ef498dfcb75f9b77dd39</string>
+	<string>1:416969091812:ios:2fbd2c9edfe3a455425af1</string>
 </dict>
 </plist>
