--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,18 @@ dependencies:
   intl: ^0.20.2
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.0
-  google_sign_in: ^6.2.1
+  google_sign_in: ^6.3.0
+  http: ^1.2.0
+  package_info_plus: ^8.0.0
+  url_launcher: ^6.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.1.0
   floating_menu_panel: ^0.0.2
   provider: ^6.1.2
+  sign_in_with_apple: ^6.1.1
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +59,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,6 +74,13 @@ flutter:
 
   assets:
     - assets/words/
+    - assets/icons/app_icon.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.png"
+  remove_alpha_ios: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
