--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   provider: ^6.1.2
   sign_in_with_apple: ^6.1.1
   crypto: ^3.0.3
+  lucide_icons_flutter: ^3.1.7
 
 dev_dependencies:
   flutter_test:
