--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
+  just_audio: ^0.9.36
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.0
   google_sign_in: ^6.3.0
