--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: word_map_app
 description: "A new Flutter project."
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -50,7 +51,7 @@ dependencies:
   provider: ^6.1.2
   sign_in_with_apple: ^6.1.1
   crypto: ^3.0.3
-  lucide_icons_flutter: ^3.1.7
+  lucide_icons: ^0.257.0
 
 dev_dependencies:
   flutter_test:
