--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  lottie: ^2.7.0
-  shared_preferences: ^2.1.0
+  google_mobile_ads: ^5.0.0
+  lottie: ^3.1.2
+  shared_preferences: ^2.2.2
   floating_menu_panel: ^0.0.2
   provider: ^6.1.2
   sign_in_with_apple: ^6.1.1
@@ -79,8 +80,9 @@ flutter:
   assets:
     - assets/words/
     - assets/lessons/
+    - assets/animations/
     - assets/icons/app_icon.png
-    - assets/lottie/splash.json
+    - assets/lottie/
 
   fonts:
     - family: Vazirmatn
